aggiunta logica pulsanto

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,7 @@
+.buttonSelected {
+    color: red !important;
+    border: solid 5px red !important;
+}
 .red {
     font-weight: bolder !important;
     color:red;
