--- a/app/view/MainPod.view.xml
+++ b/app/view/MainPod.view.xml
@@ -134,9 +134,10 @@
                          <!--<comp:PodButton width="120px" press="openGraph"
                                         icon="sap-icon://column-chart-dual-axis" iconSize="3.5rem"
                                         text="Graph" class="sapUiSmallMarginTop"/>-->
-                        <comp:PodButton width="120px" press="sendSetupPP"
+                        <comp:PodButton width="120px" press="openSetupDialog"
+                                        id="setupButton"
                                         icon="sap-icon://connected" iconSize="3.5rem"
-                                        text="Invia Setup Macchina" enabled="{=${/ena} === '1'}" class="sapUiSmallMarginTop"/> 
+                                        text="Invia Setup Macchina" enabled="{/setupButton}" class="sapUiSmallMarginTop"/> 
                     </FlexBox>
                 </HBox>
             </VBox>
