--- a/app/view/MainPod.view.xml
+++ b/app/view/MainPod.view.xml
@@ -3,144 +3,154 @@
           xmlns:f="sap.ui.layout.form" xmlns:comp="myapp.component"
           controllerName="myapp.controller.MainPod">
     <Page title="POD" class="myPage sfondotiles"
-          showHeader="false"
+          showHeader="true"
           enableScrolling="false">
-        <content>
-            <VBox width="100%" height="100%">
-                <FlexBox height="10%"
+        <customHeader>
+            <Bar>
+                <contentLeft>
+                    <Button icon="sap-icon://slim-arrow-left" press="onNavBack"/>
+                    <Image src="images/iguzlogo.png" height="75%" class="moveLogoUp"/>
+                </contentLeft>
+                <contentRight>
+                    <Button icon="sap-icon://log" />
+                </contentRight>
+            </Bar>
+        </customHeader>
+        <VBox width="100%" height="100%">
+            <FlexBox height="10%"
                          alignItems="Center"
                          justifyContent="SpaceBetween"
                          class="podHeader">
-                    <FlexBox
-                        alignItems="Center"
-                        justifyContent="Start">
-                        <Image id="lambLogo" class="tecLogo"
+<!--                <FlexBox
+                    alignItems="Center"
+                    justifyContent="Start">
+                    <Image id="lambLogo" class="tecLogo"
                                src="images/iguzlogo.png"
                                densityAware="false"
                                width="40%" />
-                    </FlexBox>
-                    <FlexBox
-                        alignItems="Center"
-                        justifyContent="SpaceBetween">
-                        <Label text="Macchina:" class="sapUiTinyMarginEnd boldt"/>
-                        <Label text="{/workcenter}" class="sapUiMediumMarginEnd whiteText"/>
-                        <!--<Label text="Resource" class="sapUiTinyMarginEnd boldt"/>
-                        <Label text="{/resource}" class="sapUiMediumMarginEnd whiteText"/> 
-                        <Label text="Phase" class="sapUiTinyMarginEnd boldt"/>
-                        <Label text="{/stepid}" class="sapUiMediumMarginEnd whiteText"/> -->
-                        <!--<Label text="Sfc" class="sapUiTinyMarginEnd boldt"/>
-                        <Label text="{/sfc}" class="sapUiMediumMarginEnd whiteText"/> -->
-                        <Label text="Utente:" class="sapUiTinyMarginEnd boldt"/>
-                        <Label text="{/user}" class="sapUiMediumMarginEnd whiteText"/>
-                        <Label text="OdL" class="sapUiTinyMarginEnd boldt"/>
-                        <Label text="{/shoporder}" class="sapUiMediumMarginEnd whiteText"/>
-                        <Label text="Prodotto finito" class="sapUiTinyMarginEnd boldt"/>
-                        <Label text="{/material}" class="sapUiMediumMarginEnd whiteText"/>
-                        <Label text="Qta:" class="sapUiTinyMarginEnd boldt"/>
-                        <Label text="{/qtydone}/{/qty}" class="sapUiMediumMarginEnd whiteText"/>
-                        <!--<Label text="{locale>myapp.generic.kenn.label}:" class="sapUiTinyMarginEnd"/>-->
-                        <Label text="" class="sapUiMediumMarginEnd whiteText"/>
-                    </FlexBox>
-                    <FlexBox
-                        alignItems="Center"
-                        justifyContent="Start">
-                        <Image id="tecLogo" class="tecLogo"
+                </FlexBox>-->
+                <FlexBox
+                    alignItems="Center"
+                    justifyContent="SpaceBetween">
+                    <Label text=" " class="sapUiMediumMarginEnd whiteText"/>
+                    <Label text="Macchina:" class="sapUiTinyMarginEnd boldt"/>
+                    <Label text="{/workcenter}" class="sapUiMediumMarginEnd whiteText"/>
+<!--                    <Label text="Resource" class="sapUiTinyMarginEnd boldt"/>
+                    <Label text="{/resource}" class="sapUiMediumMarginEnd whiteText"/> 
+                    <Label text="Phase" class="sapUiTinyMarginEnd boldt"/>
+                    <Label text="{/stepid}" class="sapUiMediumMarginEnd whiteText"/> -->
+<!--                    <Label text="Sfc" class="sapUiTinyMarginEnd boldt"/>
+                    <Label text="{/sfc}" class="sapUiMediumMarginEnd whiteText"/> -->
+                    <Label text="Utente:" class="sapUiTinyMarginEnd boldt"/>
+                    <Label text="{/user}" class="sapUiMediumMarginEnd whiteText"/>
+                    <Label text="OdL" class="sapUiTinyMarginEnd boldt"/>
+                    <Label text="{/shoporder}" class="sapUiMediumMarginEnd whiteText"/>
+                    <Label text="Prodotto finito" class="sapUiTinyMarginEnd boldt"/>
+                    <Label text="{/material}" class="sapUiMediumMarginEnd whiteText"/>
+                    <Label text="Qta:" class="sapUiTinyMarginEnd boldt"/>
+                    <Label text="{/qtydone}/{/qty}" class="sapUiMediumMarginEnd whiteText"/>
+                    <!--<Label text="{locale>myapp.generic.kenn.label}:" class="sapUiTinyMarginEnd"/>-->
+                    <Label text="" class="sapUiMediumMarginEnd whiteText"/>
+                </FlexBox>
+<!--                <FlexBox
+                    alignItems="Center"
+                    justifyContent="Start">
+                    <Image id="tecLogo" class="tecLogo"
                                src=""
                                densityAware="false"
                                width="45px" />
                         
-                        <comp:PodButton width="40px" id="backButton" press="navToBackPage" iconSize="1.8rem"
+                    <comp:PodButton width="40px" id="backButton" press="navToBackPage" iconSize="1.8rem"
                                         icon="sap-icon://nav-back" class="sapUiMediumMarginBegin sapUiMediumMarginEnd"/>
-                        <comp:PodButton width="40px" press="logOff" iconSize="1.8rem"
+                    <comp:PodButton width="40px" press="logOff" iconSize="1.8rem"
                                         icon="sap-icon://log" class="sapUiMediumMarginBegin sapUiMediumMarginEnd"/>
-                    </FlexBox>
-                </FlexBox>
-                <HBox id="mainContent" width="100%" height="90%" class="tmpBorder">
-                    <VBox width="88%" height="100%">
-                        <IconTabBar
-                            id="mainIconTabBar"
-                            select="handleIconTabBarSelect"
-                            class="sapUiResponsiveContentPadding"
-                            applyContentPadding="true"
-                            expandable="false"
-                            selectedKey="OP">
-                            <items>
-                                <IconTabFilter
-                                    icon="sap-icon://home"
-                                    text="Operazioni"
-                                    count=""
-                                    key="OP">
-                                    <mvc:XMLView viewName="myapp.view.Operations"/>
-                                </IconTabFilter>
-                                <IconTabSeparator />
-                                <IconTabFilter
-                                    icon="sap-icon://document-text"
-                                    text="Work instruction"
-                                    key="WRK">
-                                    <mvc:XMLView viewName="myapp.view.Workinstructions"/>
-                                </IconTabFilter>
-                                <IconTabFilter
-                                    icon="sap-icon://sys-add"
-                                    text="Data Collection"
-                                    key="DC">
-                                    <mvc:XMLView viewName="myapp.view.DataCollection"/>
-                                </IconTabFilter>
+                </FlexBox>-->
+            </FlexBox>
+            <HBox id="mainContent" width="100%" height="90%" class="tmpBorder">
+                <VBox width="88%" height="100%">
+                    <IconTabBar
+                        id="mainIconTabBar"
+                        select="handleIconTabBarSelect"
+                        class="sapUiResponsiveContentPadding"
+                        applyContentPadding="true"
+                        expandable="false"
+                        selectedKey="OP">
+                        <items>
+                            <IconTabFilter
+                                icon="sap-icon://home"
+                                text="Operazioni"
+                                count=""
+                                key="OP">
+                                <mvc:XMLView viewName="myapp.view.Operations"/>
+                            </IconTabFilter>
+                            <IconTabSeparator />
+                            <IconTabFilter
+                                icon="sap-icon://document-text"
+                                text="Work instruction"
+                                key="WRK">
+                                <mvc:XMLView viewName="myapp.view.Workinstructions"/>
+                            </IconTabFilter>
+                            <IconTabFilter
+                                icon="sap-icon://sys-add"
+                                text="Data Collection"
+                                key="DC">
+                                <mvc:XMLView viewName="myapp.view.DataCollection"/>
+                            </IconTabFilter>
    
-                                <!--<IconTabFilter
-                                    id="sendToTab"
-                                    icon="sap-icon://journey-depart"
-                                    text="{locale>myapp.rework.tab.sendTo}"
-                                    key="ST">
-                                    <mvc:XMLView viewName="myapp.rework.view.SendTo"/>
-                                </IconTabFilter>-->
-                                <!--<IconTabFilter
-                                    id="mainDefectTab"
-                                    icon="sap-icon://quality-issue"
-                                    text="Non conformance"
-                                    key="DEF">
-                                    <mvc:XMLView viewName="myapp.view.Defect"/>
-                                </IconTabFilter>-->
-                            </items>
-                        </IconTabBar>
-                    </VBox>
-                    <FlexBox width="12%" height="100%" class="toolBar"
-                             direction="Column"
-                             alignItems="Center"
-                             justifyContent="Start">
-                        <comp:Timer
-                            showSeconds="false"
-                            showDate="true"
-                            width="130px"
-                            height="30px"
-                            class="sapUiSmallMarginEnd"/>
-                        <comp:PodButton width="120px" press="startOperation"
-                                        id="startButton"
-                                        icon="sap-icon://begin" iconSize="3.5rem"
-                                        text="Start" class="sapUiSmallMarginTop" enabled="{/startButton}"/>
-                        <comp:PodButton width="120px" press="pauseOperation"
-                                        id="pausaButton"
-                                        icon="sap-icon://pause" iconSize="3.5rem"
-                                        text="Pausa" class="sapUiSmallMarginTop" enabled="{/pausaButton}"/>
-                        <comp:PodButton width="120px" press="stopOperation"
-                                        id="completaButton"
-                                        icon="sap-icon://complete" iconSize="3.5rem"
-                                        text="Completa" class="sapUiSmallMarginTop" enabled="{/completaButton}"/>
-                        <!-- <comp:PodButton width="120px" press="onOpenDefect"
-                        icon="sap-icon://quality-issue" iconSize="3.5rem"
-                        text="Open NC" class="sapUiSmallMarginTop"/> -->
-                        <comp:PodButton width="120px" press="loggedDC"
-                                        icon="sap-icon://sys-add" iconSize="3.5rem"
-                                        text="Data Collection memorizzate" class="sapUiSmallMarginTop"/>
-                         <!--<comp:PodButton width="120px" press="openGraph"
-                                        icon="sap-icon://column-chart-dual-axis" iconSize="3.5rem"
-                                        text="Graph" class="sapUiSmallMarginTop"/>-->
-                        <comp:PodButton width="120px" press="openSetupDialog"
-                                        id="setupButton"
-                                        icon="sap-icon://connected" iconSize="3.5rem"
-                                        text="Invia Setup Macchina" enabled="{/setupButton}" class="sapUiSmallMarginTop"/> 
-                    </FlexBox>
-                </HBox>
-            </VBox>
-        </content>
+                            <!--<IconTabFilter
+                                id="sendToTab"
+                                icon="sap-icon://journey-depart"
+                                text="{locale>myapp.rework.tab.sendTo}"
+                                key="ST">
+                                <mvc:XMLView viewName="myapp.rework.view.SendTo"/>
+                            </IconTabFilter>-->
+                            <!--<IconTabFilter
+                                id="mainDefectTab"
+                                icon="sap-icon://quality-issue"
+                                text="Non conformance"
+                                key="DEF">
+                                <mvc:XMLView viewName="myapp.view.Defect"/>
+                            </IconTabFilter>-->
+                        </items>
+                    </IconTabBar>
+                </VBox>
+                <FlexBox width="12%" height="100%" class="toolBar"
+                         direction="Column"
+                         alignItems="Center"
+                         justifyContent="Start">
+                    <comp:Timer
+                        showSeconds="false"
+                        showDate="true"
+                        width="130px"
+                        height="30px"
+                        class="sapUiSmallMarginEnd"/>
+                    <comp:PodButton width="120px" press="startOperation"
+                                    id="startButton"
+                                    icon="sap-icon://begin" iconSize="3.5rem"
+                                    text="Start" class="sapUiSmallMarginTop" enabled="{/startButton}"/>
+                    <comp:PodButton width="120px" press="pauseOperation"
+                                    id="pausaButton"
+                                    icon="sap-icon://pause" iconSize="3.5rem"
+                                    text="Pausa" class="sapUiSmallMarginTop" enabled="{/pausaButton}"/>
+                    <comp:PodButton width="120px" press="stopOperation"
+                                    id="completaButton"
+                                    icon="sap-icon://complete" iconSize="3.5rem"
+                                    text="Completa" class="sapUiSmallMarginTop" enabled="{/completaButton}"/>
+                    <!-- <comp:PodButton width="120px" press="onOpenDefect"
+                    icon="sap-icon://quality-issue" iconSize="3.5rem"
+                    text="Open NC" class="sapUiSmallMarginTop"/> -->
+                    <comp:PodButton width="120px" press="loggedDC"
+                                    icon="sap-icon://sys-add" iconSize="3.5rem"
+                                    text="Data Collection memorizzate" class="sapUiSmallMarginTop"/>
+                    <!--<comp:PodButton width="120px" press="openGraph"
+                    icon="sap-icon://column-chart-dual-axis" iconSize="3.5rem"
+                    text="Graph" class="sapUiSmallMarginTop"/>-->
+                    <comp:PodButton width="120px" press="openSetupDialog"
+                                    id="setupButton"
+                                    icon="sap-icon://connected" iconSize="3.5rem"
+                                    text="Invia Setup Macchina" enabled="{/setupButton}" class="sapUiSmallMarginTop"/> 
+                </FlexBox>
+            </HBox>
+        </VBox>
     </Page>
 </mvc:View>
