modificato action menu

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,9 @@
+.fontAction .sapMBtnInner {
+    font-size: 25pt;
+}
+.fontAction .sapMBtnIcon {
+    font-size: 25pt;
+}
 .sapMMessageToast {
     font-size: 24pt;
     width: 60rem !important;
