--- a/app/view/menuShopOrders.fragment.xml
+++ b/app/view/menuShopOrders.fragment.xml
@@ -2,5 +2,5 @@
     xmlns="sap.m"
     xmlns:core="sap.ui.core"
     xmlns:u="sap.ui.unified">
-    <u:Menu id="menuID" itemSelect="discriminator" class="dimensionsMenu"/>
+    <u:Menu id="menuID" itemSelect="discriminator" class="dimensionsMenu scaled"/>
 </core:FragmentDefinition>
