--- a/app/view/LoggedDC.fragment.xml
+++ b/app/view/LoggedDC.fragment.xml
@@ -4,7 +4,8 @@
     xmlns:core="sap.ui.core">
     <Dialog
         id="helloDialog2"
-        title="Logged DC">
+        title="Logged DC"
+    class="scaled">
         <l:VerticalLayout
             class="sapUiContentPadding"
             width="1200px">
